Fixes to layout issues in firefox.

--- a/modules/web/scss/modules/editor-tabs.scss
+++ b/modules/web/scss/modules/editor-tabs.scss
@@ -5,6 +5,12 @@
         border-bottom: none;
         .rc-tabs-content {
             height: calc(100% - 20px);
+            .editor-split-view {
+                position: relative;
+                .text-editor {
+                    height: 100%;
+                }
+            }
         }
         .rc-tabs-bar {
             border-bottom: none;
@@ -79,6 +85,41 @@
             height: 100%;
             overflow: hidden;
             position: relative;
+        }
+    }
+    .split-view-controls-container {
+        position: absolute;
+        bottom: 20px;
+        right: 50px;
+        z-index: 30;
+        background: $bottom-right-controls-bgcolor;
+        color: #fff;
+        padding: 0;
+        line-height: 30px;
+        .btn-icon {
+            float: left;
+            cursor: pointer;
+            span {
+                font-size: 12px;
+                padding-left: 5px;
+                width:95px;
+            }
+            &:hover:after {
+                opacity: 0.5
+            }
+        }
+        .bottom-label-icon-wrapper{
+            width: 25px;
+            height: 25px;
+            float: left;
+            padding-left: 5px;
+            padding-top: 2px;
+            margin-top: 0;
+        }
+        .bottom-view-label {
+            font-size: 12px;
+            float: left;
+            padding-right: 10px;
         }
     }
 }
